# 22Sample

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: detect_text_mover.launch  detect_text_mover_sim.launch  detect_text_node_dev.launch  move_node_dev.launch
scripts/: aws_detect_text.py  detect_text_node.py  move_node.py
